@@ -477,6 +477,9 @@ extern "C"
 		/*3CF4*/ REG_CMD(GetExplosionRefRadius)
 		/*3CF5*/ REG_CMD(SetExplosionRefRadius)
 		/*3CF6*/ REG_CMD(SetExplosionRefSource)
+		/*3CF7*/ REG_CMD(GetActorValueDamage)
+
+
 
 		
 		//***Current Max OpCode: 0x3D10 (https://geckwiki.com/index.php?title=NVSE_Opcode_Base)
@@ -488,6 +491,7 @@ extern "C"
 
 		
 #if _DEBUG  //for functions being tested (or just abandoned).
+
 
 		
 		
